--- a/.gitignore
+++ b/.gitignore
@@ -35,12 +35,14 @@ captures/
 # IntelliJ
 *.iml
 .idea/workspace.xml
+.idea/modules.xml
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/assetWizardSettings.xml
 .idea/dictionaries
 .idea/libraries
 .idea/caches
+.idea/misc.xml
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
